--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Deniz YILDIRIM Web Tasarım Dersi">
   <meta name="author" content="">
+  <meta name="theme-color" content="#212529">
 
   <title>HİT-İÖ Web Çalışması </title>
 
@@ -32,7 +33,7 @@
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link active" href="index.html">Anasayfa</a>
           <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
-          <a class="nav-link" href="#">İletişim</a>
+          <a class="nav-link" href="iletisim.html">İletişim</a>
         </nav>
       </div>
     </header>
@@ -297,7 +298,7 @@
     <div class="sarki-div">
       <h2>Haftanın Şarkısı</h2>
       <hr>
-      <iframe class="border" src="https://open.spotify.com/embed/playlist/63o49yEGmjO0COmE41wRdN?theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      <iframe class="sarki border" src="https://open.spotify.com/embed/playlist/63o49yEGmjO0COmE41wRdN?theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
     </div>
     </section>
 
