--- a/iletisim.html
+++ b/iletisim.html
@@ -144,8 +144,13 @@
     </section>
 
 
-    <footer class="mt-auto text-white-50">
-      <p></p>
+    <footer class="deniz">
+      <div class="footer">
+        <p>Deniz YILDIRIM</p>
+        <a class="instagram-a" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/?lang=tr" target="_blank"><i class="fab fa-twitter ms-3"></i></a>
+        <a href="https://tr-tr.facebook.com/" target="_blank"><i class="fab fa-facebook ms-3"></i></a>
+      </div>
     </footer>
   </div>
 
