--- a/iletisim.html
+++ b/iletisim.html
@@ -81,7 +81,7 @@
                         </div>
                         <div class="col-md-12">
                           <div class="form-group">
-                            <input type="hidden" name="_next" value="https://thawing-citadel-85210.herokuapp.com/succsess.html">
+                            <input type="hidden" name="_next" value="https://thawing-citadel-85210.herokuapp.com/success.html">
                             <input type="submit" value="Gönder" class="btn btn-primary">
                             <div class="submitting"></div>
                           </div>
