Duyurular margin-top -5. Success sayfası 100vh oldu ve inset shadow eklendi.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <section id="duyurular">
         <h2>DUYURULAR</h2>
         <h3>
-          <marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()" direction="left">Duyuru 1 | Duyuru 2 | Duyuru 3</marquee>
+          <marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()" direction="left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec risus nibh, feugiat eget ante vel, pretium viverra odio. Nulla eget odio vitae tortor feugiat elementum vel et lectus. | Sed luctus justo pretium massa tempus euismod. Donec semper orci ullamcorper gravida vehicula. | Vivamus viverra nisl nec nunc elementum sodales.</marquee>
         </h3>
         <hr>
       </section>
