Hakkımızda sayfası tamamlandı.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,19 @@
 
     <main role="main" class="inner cover">
 
+      <!-- DUYURULAR -->
+
+      <section id="duyurular">
+        <h3>DUYURULAR</h3>
+        <h3>
+          <marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()" direction="left"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec risus nibh, feugiat eget ante vel, pretium viverra odio. Nulla eget odio vitae tortor feugiat elementum vel et lectus. | Sed luctus justo pretium massa tempus euismod. Donec semper orci ullamcorper gravida vehicula. | Vivamus viverra nisl nec nunc elementum sodales.</p></marquee>
+        </h3>
+        <hr>
+      </section>
+
       <!-- Carousel -->
+
+
 
       <div class="slayt border">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -88,15 +100,6 @@
       </div>
 
       <hr>
-      <!-- DUYURULAR -->
-
-      <section id="duyurular">
-        <h2>DUYURULAR</h2>
-        <h3>
-          <marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()" direction="left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec risus nibh, feugiat eget ante vel, pretium viverra odio. Nulla eget odio vitae tortor feugiat elementum vel et lectus. | Sed luctus justo pretium massa tempus euismod. Donec semper orci ullamcorper gravida vehicula. | Vivamus viverra nisl nec nunc elementum sodales.</marquee>
-        </h3>
-        <hr>
-      </section>
     </main>
 
     <!-- Haftanın Kitapları -->
@@ -263,7 +266,7 @@
               <tr>
                 <th scope="row"></th>
                 <td>
-                  <h3>İsim: </h3>
+                  <h4>İsim: </h4>
                 </td>
                 <td>
                   <p>Neil deGrasse Tyson Lecture @ UW 5/12/2011 FULL</p>
@@ -272,7 +275,7 @@
               <tr>
                 <th scope="row"></th>
                 <td>
-                  <h3>Açıklama: </h3>
+                  <h4>Açıklama: </h4>
                 </td>
                 <td>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer fermentum ipsum et lectus vehicula tincidunt. In sed risus sit amet metus ultricies ultrices.</p>
@@ -281,7 +284,7 @@
               <tr>
                 <th scope="row"></th>
                 <td>
-                  <h3>Yazar: </h3>
+                  <h4>Yazar: </h4>
                 </td>
                 <td>
                   <p>Neil deGrasse Tyson</p>
