--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -9,6 +9,7 @@
 
   <title>Hakkımızda</title>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <!-- Bootstrap core CSS -->
@@ -173,20 +174,20 @@
             <img class="avatar-1 border" src="https://www.svgrepo.com/show/170303/avatar.svg" alt="">
             <h2>Başlık 1</h2>
             <p>Lorem ipsum dolor sit amet.</p>
-            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="#">Detay</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="avatar-2 border" src="https://www.w3schools.com/howto/img_avatar2.png" alt="">
 
             <h2>Başlık 2</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nibh tortor, aliquet in ipsum eget, interdum egestas leo.</p>
-            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="#">Detay</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <img class="avatar-3 border" src="https://www.svgrepo.com/show/122767/avatar.svg" alt="">
             <h2>Başlık 3</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="#">Detay</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -195,53 +196,52 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-            <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        <div class="row featurette kart-11 pt-3 pb-3">
+          <div class="col-md-7 kart-govde-11">
+            <h2 class="featurette-heading">Lorem ipsum dolor sit.<span class="text-muted">Lorem ipsum dolor.</span></h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent scelerisque neque a efficitur ullamcorper.</p>
           </div>
           <div class="col-md-5 d-flex align-items-center">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
+            <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
               focusable="false">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
-
+            </svg> -->
+            <img class="ozellik-img border" src="https://thumbs.dreamstime.com/b/vector-businessman-make-profit-laptop-51472655.jpg" alt="">
           </div>
         </div>
 
         <hr class="featurette-divider">
 
-        <div class="row featurette">
-          <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <div class="row featurette pt-3 pb-3 kart-12">
+          <div class="col-md-7 order-md-2 kart-govde-12">
+            <h2 class="featurette-heading">Lorem ipsum dolor sit amet.<span class="text-muted">Lorem ipsum dolor.</span></h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc euismod nulla et.</p>
           </div>
           <div class="col-md-5 order-md-1 d-flex align-items-center">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
+            <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
               focusable="false">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
-
+            </svg> -->
+            <img class="ozellik-img border" src="https://previews.123rf.com/images/pratyaksa/pratyaksa1701/pratyaksa170100059/69401194-person-typing-document-on-computer-to-do-job-studying-or-working-concept-person-working-on-computer-.jpg" alt="">
           </div>
         </div>
 
         <hr class="featurette-divider">
 
-        <div class="row featurette">
-          <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your
-              content.</p>
+        <div class="row featurette pt-5 pb-5 kart-13">
+          <div class="col-md-7 kart-govde-13">
+            <h2 class="featurette-heading">Lorem ipsum dolor sit.<span class="text-muted">Lorem ipsum.</span></h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fermentum.</p>
           </div>
           <div class="col-md-5 d-flex align-items-center">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
+            <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
               focusable="false">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-            </svg>
-
+            </svg> -->
+            <img class="ozellik-img border" src="https://media.istockphoto.com/vectors/business-man-working-on-computer-vector-id587799996" alt="">
           </div>
         </div>
 
@@ -254,7 +254,7 @@
 
       <!-- FOOTER -->
       <footer class="container">
-        <div class="footer">
+        <div class="footer hakkimizda-footer">
           <p>Deniz YILDIRIM</p>
           <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://twitter.com/?lang=tr" target="_blank"><i class="fab fa-twitter ms-3"></i></a>
@@ -276,8 +276,10 @@
   <!-- Bootstrap core JavaScript
     ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
+  <script src="script.js" charset="utf-8"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
