hr marginler düzenlendi.

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
 
     <footer class="mastfoot mt-auto mb-3 footer">
-      <div class="inner">
+      <div class="inner anasayfa-footer">
         <p>Deniz YILDIRIM</p>
         <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://twitter.com/?lang=tr" target="_blank"><i class="fab fa-twitter ms-3"></i></a>
