Github icon yenilendi.

--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -259,7 +259,7 @@
           <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://twitter.com/?lang=tr" target="_blank"><i class="fab fa-twitter ms-3"></i></a>
           <a href="https://tr-tr.facebook.com/" target="_blank"><i class="fab fa-facebook ms-3"></i></a>
-          <a href="https://github.com/denizzy/web-tasarim" target="_blank"><i class="fab fa-github-square ms-3"></i></a>
+          <a href="https://github.com/denizzy/web-tasarim" target="_blank"><i class="fab fa-github ms-3"></i></a>
         </div>
       </footer>
     </main>
