Hakkımızda sayfası h3 eklendi.

--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -99,12 +99,10 @@
         </nav>
       </div>
     </header>
-
+    <h3 class="hakkimizda-header-h3">Biz Kimiz?</h3>
     <main>
-
       <!-- Carousel -->
       <div class="d-flex justify-content-center">
-
         <div id="myCarousel" class="carousel slide border" data-bs-ride="carousel">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -193,7 +191,7 @@
 
 
         <!-- START THE FEATURETTES -->
-
+        <h3 class="hakkimizda-header-h3">Hizmetlerimiz</h3>
         <hr class="featurette-divider">
 
         <div class="row featurette kart-11 pt-3 pb-3">
