--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -33,6 +33,27 @@
       user-select: none;
     }
 
+    @media only screen and (max-width: 768px) {
+      .text-center {
+        box-shadow: none;
+        justify-content: unset;
+      }
+
+      body {
+        box-shadow: none;
+        justify-content: unset;
+      }
+
+      .for-media-queries, .for-media-queries-img {
+        text-align: center;
+        justify-content: center;
+      }
+
+      .cover-container {
+        box-shadow: inset 0 0 5rem rgb(0 0 0 / 50%)
+      }
+    }
+
     @media (min-width: 768px) {
       .bd-placeholder-img-lg {
         font-size: 3.5rem;
@@ -81,6 +102,7 @@
   </style>
 
 
+
   <!-- Custom styles for this template -->
   <link href="carousel.css" rel="stylesheet">
   <link rel="stylesheet" href="hakkimizda.css">
@@ -91,7 +113,7 @@
   <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto mt-4">
       <div class="inner">
-        <h3 class="masthead-brand"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</h3>
+        <h3 class="masthead-brand for-media-queries"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</h3>
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link" href="index.html">Anasayfa</a>
           <a class="nav-link active" href="hakkimizda.html">Hakkımızda</a>
@@ -194,12 +216,12 @@
         <h3 class="hakkimizda-header-h3">Hizmetlerimiz</h3>
         <hr class="featurette-divider">
 
-        <div class="row featurette kart-11 pt-3 pb-3">
-          <div class="col-md-7 kart-govde-11">
+        <div class="row featurette kart-11 pt-3 pb-3 for-media-queries">
+          <div class="col-md-7 kart-govde-11 ">
             <h2 class="featurette-heading">Lorem ipsum dolor sit.<span class="text-muted">Lorem ipsum dolor.</span></h2>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent scelerisque neque a efficitur ullamcorper.</p>
           </div>
-          <div class="col-md-5 d-flex align-items-center">
+          <div class="col-md-5 d-flex align-items-center for-media-queries-img">
             <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
               focusable="false">
               <title>Placeholder</title>
@@ -211,12 +233,12 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette pt-3 pb-3 kart-12">
+        <div class="row featurette pt-3 pb-3 kart-12 for-media-queries">
           <div class="col-md-7 order-md-2 kart-govde-12">
             <h2 class="featurette-heading">Lorem ipsum dolor sit amet.<span class="text-muted">Lorem ipsum dolor.</span></h2>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc euismod nulla et.</p>
           </div>
-          <div class="col-md-5 order-md-1 d-flex align-items-center">
+          <div class="col-md-5 order-md-1 d-flex align-items-center for-media-queries-img">
             <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
               focusable="false">
               <title>Placeholder</title>
@@ -228,12 +250,12 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette pt-5 pb-5 kart-13">
+        <div class="row featurette pt-5 pb-5 kart-13 for-media-queries">
           <div class="col-md-7 kart-govde-13">
             <h2 class="featurette-heading">Lorem ipsum dolor sit.<span class="text-muted">Lorem ipsum.</span></h2>
             <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fermentum.</p>
           </div>
-          <div class="col-md-5 d-flex align-items-center">
+          <div class="col-md-5 d-flex align-items-center for-media-queries-img">
             <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
               focusable="false">
               <title>Placeholder</title>
