--- a/iletisim.html
+++ b/iletisim.html
@@ -28,6 +28,48 @@
   <!-- <link rel="stylesheet" href="iletisim.css"> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="iletisim.css">
+
+  <style>
+  @media only screen and (max-width: 1024px) {
+    /* .text-center {
+      box-shadow: none;
+      justify-content: unset;
+    }
+
+    .baslik {
+      padding: 0;
+    }
+    body {
+      box-shadow: none;
+      justify-content: unset;
+    }
+
+    .for-media-queries, .for-media-queries-img {
+      text-align: center;
+      justify-content: center;
+    }
+
+    .cover-container {
+      box-shadow: inset 0 0 5rem rgb(0 0 0 / 50%)
+    } */
+    .baslik {
+      padding: 0;
+    }
+    .text-center {
+      justify-content: unset;
+      max-width: none !important;
+      box-shadow: none;
+    }
+    .cover-container{
+      max-width: none;
+      width: auto !important;
+      box-shadow: inset 0 0 5rem rgb(0 0 0 / 50%)
+
+    }
+  }
+
+
+  </style>
 </head>
 
 <body class="d-flex text-center text-white">
