--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Deniz YILDIRIM Web Tasarım Dersi">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="">
   <meta name="theme-color" content="#212529">
 
@@ -25,6 +25,23 @@
 
   <!-- Custom styles for this template -->
   <link href="cover.css" rel="stylesheet">
+
+  <style>
+  
+
+    @media only screen and (max-width: 768px) {
+      .text-center {
+        box-shadow: none;
+        justify-content: unset;
+
+
+      }
+
+      .cover-container {
+        box-shadow: inset 0 0 5rem rgb(0 0 0 / 50%)
+      }
+    }
+  </style>
 
 </head>
 
@@ -49,7 +66,10 @@
       <section id="duyurular">
         <h3>DUYURULAR</h3>
         <h3>
-          <marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()" direction="left"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec risus nibh, feugiat eget ante vel, pretium viverra odio. Nulla eget odio vitae tortor feugiat elementum vel et lectus. | Sed luctus justo pretium massa tempus euismod. Donec semper orci ullamcorper gravida vehicula. | Vivamus viverra nisl nec nunc elementum sodales.</p></marquee>
+          <marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()" direction="left">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec risus nibh, feugiat eget ante vel, pretium viverra odio. Nulla eget odio vitae tortor feugiat elementum vel et lectus. | Sed luctus justo pretium massa tempus euismod.
+              Donec semper orci ullamcorper gravida vehicula. | Vivamus viverra nisl nec nunc elementum sodales.</p>
+          </marquee>
         </h3>
         <hr>
       </section>
@@ -136,7 +156,8 @@
                     <li class="list-group-item item">A Heritage of Shadows</li>
                     <li class="list-group-item item">Madeleine Brent</li>
                     <li class="list-group-item item">1 Mart 1984</li>
-                    <li class="list-group-item buton"><a href="https://www.amazon.com/Heritage-Shadows-Madeleine-Brent/dp/0285641654/ref=sr_1_1?dchild=1&keywords=A+Heritage+of+Shadows&qid=1634221615&s=books&sr=1-1" target="_blank"><button type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
+                    <li class="list-group-item buton"><a href="https://www.amazon.com/Heritage-Shadows-Madeleine-Brent/dp/0285641654/ref=sr_1_1?dchild=1&keywords=A+Heritage+of+Shadows&qid=1634221615&s=books&sr=1-1" target="_blank"><button
+                          type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
                   </ul>
                 </div>
               </div>
@@ -150,7 +171,8 @@
                     <li class="list-group-item item">Heart of the Few</li>
                     <li class="list-group-item item">Jon Duncan</li>
                     <li class="list-group-item item">Mayıs 2020</li>
-                    <li class="list-group-item buton"><a href="https://www.amazon.com/Heart-Few-Jon-Duncan-ebook/dp/B08FBMRNVN/ref=sr_1_1?dchild=1&keywords=Heart+of+the+Few&qid=1634221635&s=books&sr=1-1" target="_blank"><button type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
+                    <li class="list-group-item buton"><a href="https://www.amazon.com/Heart-Few-Jon-Duncan-ebook/dp/B08FBMRNVN/ref=sr_1_1?dchild=1&keywords=Heart+of+the+Few&qid=1634221635&s=books&sr=1-1" target="_blank"><button type="button"
+                          class="btn btn-outline-primary">Kitaba Git</button></a></li>
                   </ul>
                 </div>
               </div>
@@ -165,7 +187,8 @@
                     <li class="list-group-item item">The Devil You Know</li>
                     <li class="list-group-item item">Kit Rocha</li>
                     <li class="list-group-item item">31 Ağustos 2021</li>
-                    <li class="list-group-item buton"><a href="https://www.amazon.com/Devil-Know-Mercenary-Librarians-Book-ebook/dp/B0879FF8J1/ref=sr_1_3?dchild=1&keywords=The+Devil+You+Know&qid=1634221652&s=books&sr=1-3" target="_blank"><button type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
+                    <li class="list-group-item buton"><a href="https://www.amazon.com/Devil-Know-Mercenary-Librarians-Book-ebook/dp/B0879FF8J1/ref=sr_1_3?dchild=1&keywords=The+Devil+You+Know&qid=1634221652&s=books&sr=1-3" target="_blank"><button
+                          type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
                   </ul>
                 </div>
               </div>
@@ -179,7 +202,8 @@
                     <li class="list-group-item item">The Henna Artist</li>
                     <li class="list-group-item item">Alka Joshi</li>
                     <li class="list-group-item item">3 Mart 2020</li>
-                    <li class="list-group-item buton"><a href="https://www.amazon.com/Henna-Artist-Novel-Alka-Joshi-ebook/dp/B07R5YVHL9/ref=sr_1_1?dchild=1&keywords=The+Henna+Artist&qid=1634221674&s=books&sr=1-1" target="_blank"><button type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
+                    <li class="list-group-item buton"><a href="https://www.amazon.com/Henna-Artist-Novel-Alka-Joshi-ebook/dp/B07R5YVHL9/ref=sr_1_1?dchild=1&keywords=The+Henna+Artist&qid=1634221674&s=books&sr=1-1" target="_blank"><button type="button"
+                          class="btn btn-outline-primary">Kitaba Git</button></a></li>
                   </ul>
                 </div>
               </div>
@@ -193,7 +217,8 @@
                     <li class="list-group-item item">Klara and the Sun</li>
                     <li class="list-group-item item">Kazuo Ishiguro</li>
                     <li class="list-group-item item">2 Mart 2021</li>
-                    <li class="list-group-item buton"><a href="https://www.amazon.com/Klara-Sun-novel-Kazuo-Ishiguro-ebook/dp/B08B7V6CQ8/ref=sr_1_1?dchild=1&keywords=Klara+and+the+Sun&qid=1634221690&s=books&sr=1-1" target="_blank"><button type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
+                    <li class="list-group-item buton"><a href="https://www.amazon.com/Klara-Sun-novel-Kazuo-Ishiguro-ebook/dp/B08B7V6CQ8/ref=sr_1_1?dchild=1&keywords=Klara+and+the+Sun&qid=1634221690&s=books&sr=1-1" target="_blank"><button
+                          type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
                   </ul>
                 </div>
               </div>
@@ -208,7 +233,8 @@
                     <li class="list-group-item item">All the Flowers in Paris</li>
                     <li class="list-group-item item">Sarah Jio</li>
                     <li class="list-group-item item">Eylül 2018</li>
-                    <li class="list-group-item buton"><a href="https://www.amazon.com/All-Flowers-in-Paris-Sarah-Jio-audiobook/dp/B07VNNDM1S/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1634221715&sr=1-1" target="_blank"><button type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
+                    <li class="list-group-item buton"><a href="https://www.amazon.com/All-Flowers-in-Paris-Sarah-Jio-audiobook/dp/B07VNNDM1S/ref=tmm_aud_swatch_0?_encoding=UTF8&qid=1634221715&sr=1-1" target="_blank"><button type="button"
+                          class="btn btn-outline-primary">Kitaba Git</button></a></li>
                   </ul>
                 </div>
               </div>
@@ -222,7 +248,8 @@
                     <li class="list-group-item item">The Moon Sister</li>
                     <li class="list-group-item item">Lucinda Riley</li>
                     <li class="list-group-item item">11 Ekim 2018</li>
-                    <li class="list-group-item buton"><a href="https://www.amazon.com/The-Moon-Sister-Lucinda-Riley-audiobook/dp/B07GS4SYDB/ref=sr_1_1?dchild=1&keywords=The+Moon+Sister&qid=1634221757&s=audible&sr=1-1" target="_blank"><button type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
+                    <li class="list-group-item buton"><a href="https://www.amazon.com/The-Moon-Sister-Lucinda-Riley-audiobook/dp/B07GS4SYDB/ref=sr_1_1?dchild=1&keywords=The+Moon+Sister&qid=1634221757&s=audible&sr=1-1" target="_blank"><button
+                          type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
                   </ul>
                 </div>
               </div>
@@ -236,7 +263,8 @@
                     <li class="list-group-item item">The Steel Remains</li>
                     <li class="list-group-item item">Richard Morgan</li>
                     <li class="list-group-item item">7 Ağustos 2008</li>
-                    <li class="list-group-item buton"><a href="https://www.amazon.com/The-Steel-Remains-audiobook/dp/B001QCZU4C/ref=sr_1_1?dchild=1&keywords=The+Steel+Remains&qid=1634221782&s=audible&sr=1-1" target="_blank"><button type="button" class="btn btn-outline-primary">Kitaba Git</button></a></li>
+                    <li class="list-group-item buton"><a href="https://www.amazon.com/The-Steel-Remains-audiobook/dp/B001QCZU4C/ref=sr_1_1?dchild=1&keywords=The+Steel+Remains&qid=1634221782&s=audible&sr=1-1" target="_blank"><button type="button"
+                          class="btn btn-outline-primary">Kitaba Git</button></a></li>
                   </ul>
                 </div>
               </div>
@@ -298,15 +326,16 @@
         </div>
       </div>
     </section>
-<hr>
+    <hr>
     <!-- Haftanın Şarkısı -->
 
     <section id="sarki">
-    <div class="sarki-div">
-      <h2>Haftanın Şarkısı</h2>
-      <hr>
-      <iframe class="sarki border" src="https://open.spotify.com/embed/playlist/63o49yEGmjO0COmE41wRdN?theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-    </div>
+      <div class="sarki-div">
+        <h2>Haftanın Şarkısı</h2>
+        <hr>
+        <iframe class="sarki border" src="https://open.spotify.com/embed/playlist/63o49yEGmjO0COmE41wRdN?theme=0" width="100%" height="380" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      </div>
     </section>
 
 
