Anasayfada haftanın kitapları harici divlerde zoom kalktı.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
   <link href="cover.css" rel="stylesheet">
 
   <style>
-  
-
     @media only screen and (max-width: 768px) {
       .text-center {
         box-shadow: none;
@@ -46,6 +44,7 @@
 </head>
 
 <body class="text-center">
+
 
   <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto mt-4">
@@ -94,14 +93,14 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://placekitten.com/640/360" class="d-block w-100" alt="...">
+              <img src="https://picsum.photos/640/360?grayscale" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>İkinci Görüntü Başlığı</h5>
                 <p>AÇIKLAMA BURAYA</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="https://placebeard.it/640x360" class="d-block w-100" alt="...">
+              <img src="https://source.unsplash.com/random/640x360" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Üçüncü Görüntü Başlığı</h5>
                 <p>AÇIKLAMA BURAYA</p>
