--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="https://picsum.photos/640/360" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption blur d-none d-md-block">
                 <h5>İlk Görüntü Başlığı</h5>
                 <p>AÇIKLAMA BURAYA</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="https://picsum.photos/640/360?grayscale" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption blur d-none d-md-block">
                 <h5>İkinci Görüntü Başlığı</h5>
                 <p>AÇIKLAMA BURAYA</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="https://source.unsplash.com/random/640x360" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption blur d-none d-md-block">
                 <h5>Üçüncü Görüntü Başlığı</h5>
                 <p>AÇIKLAMA BURAYA</p>
               </div>
