Vizyon ve misyon sayfası eklendi.

--- a/iletisim.html
+++ b/iletisim.html
@@ -82,6 +82,8 @@
           <a class="nav-link" href="index.html">Anasayfa</a>
           <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
           <a class="nav-link active" href="iletisim.html">İletişim</a>
+          <a class="nav-link" href="vizyonmisyon.html">Vizyon/Misyon</a>
+
         </nav>
       </div>
     </header>
@@ -164,7 +166,7 @@
                         <span class="fa fa-globe"></span>
                       </div>
                       <div class="text pl-3">
-                        <p><span>Website:</span> <a href="http://www.inonu.edu.tr/">http://www.inonu.edu.tr/</a></p>
+                        <p><span>Website:</span> <a href="http://www.inonu.edu.tr/" target="_blank">http://www.inonu.edu.tr/</a></p>
                       </div>
                     </div>
                   </div>
