--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -118,6 +118,8 @@
           <a class="nav-link" href="index.html">Anasayfa</a>
           <a class="nav-link active" href="hakkimizda.html">Hakkımızda</a>
           <a class="nav-link" href="iletisim.html">İletişim</a>
+          <a class="nav-link" href="vizyonmisyon.html">Vizyon/Misyon</a>
+
         </nav>
       </div>
     </header>
