--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
           <a class="nav-link active" href="index.html">Anasayfa</a>
           <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
           <a class="nav-link" href="iletisim.html">İletişim</a>
+          <a class="nav-link" href="vizyonmisyon.html">Vizyon/Misyon</a>
         </nav>
       </div>
     </header>
