Yenı div-divider eklendi. Hakkımızda sayfası yeniden yapıldı.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <body class="text-center">
 
 
-  <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-    <header class="masthead mb-auto mt-4">
+  <div class="cover-container d-flex h-100 mx-auto flex-column">
+    <header class="masthead mt-4">
       <div class="inner">
         <h3 class="masthead-brand"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</h3>
         <nav class="nav nav-masthead justify-content-center">
@@ -58,6 +58,8 @@
         </nav>
       </div>
     </header>
+    <div class="b-example-divider"></div>
+
 
     <main role="main" class="inner cover">
 
@@ -71,10 +73,10 @@
               Donec semper orci ullamcorper gravida vehicula. | Vivamus viverra nisl nec nunc elementum sodales.</p>
           </marquee>
         </h3>
-        <hr>
       </section>
 
       <!-- Carousel -->
+      <div class="b-example-divider"></div>
 
 
 
@@ -119,7 +121,8 @@
         </div>
       </div>
 
-      <hr>
+      <div class="b-example-divider"></div>
+
     </main>
 
     <!-- Haftanın Kitapları -->
@@ -129,7 +132,7 @@
         <h2>Haftanın Kitapları</h2>
         <hr>
       </div>
-      <div class="album py-5">
+      <div class="album">
         <div class="container">
 
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
@@ -273,7 +276,7 @@
         </div>
       </div>
     </section>
-    <hr>
+    <div class="b-example-divider"></div>
 
     <!-- Haftanın Filmi -->
 
@@ -326,7 +329,7 @@
         </div>
       </div>
     </section>
-    <hr>
+    <div class="b-example-divider"></div>
     <!-- Haftanın Şarkısı -->
 
     <section id="sarki">
@@ -337,6 +340,8 @@
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       </div>
     </section>
+
+    <div class="b-example-divider"></div>
 
 
     <footer class="mastfoot mt-auto mb-3 footer">
