--- a/vizyonmisyon.html
+++ b/vizyonmisyon.html
@@ -104,9 +104,7 @@
       </header>
     </div>
 
-    <div class="b-example-divider">
-
-    </div>
+    <div class="b-example-divider"></div>
 
 
     <div class="vizyon px-4 text-center">
