Vizyon sayfası yenilendi.

--- a/vizyonmisyon.html
+++ b/vizyonmisyon.html
@@ -89,7 +89,7 @@
 <body>
 
   <main>
-    <div class="header-wrapper px-4 py-5 my-5">
+    <div class="masthead-wrap">
       <header class="masthead mb-auto mt-4">
         <div class="inner">
           <h3 class="masthead-brand"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</h3>
@@ -103,8 +103,11 @@
       </header>
     </div>
 
-    <div class="b-example-divider"></div>
 
+
+
+
+    <div class="b-example-divider"></div>
 
     <div class="vizyon px-4 text-center">
       <!-- <img class="d-block mx-auto mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
