--- a/iletisim.html
+++ b/iletisim.html
@@ -74,7 +74,7 @@
 
 <body class="d-flex text-center text-white">
 
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
     <header class="masthead mb-auto mt-4 baslik">
       <div class="inner">
         <h3 class="masthead-brand"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</h3>
