--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
   <title>HİT-İÖ Web Çalışması </title>
 
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="https://thumbs.dreamstime.com/b/letter-d-logo-icon-design-isolated-dark-background-letter-d-logo-icon-design-isolated-dark-background-simple-vector-logo-193922091.jpg" sizes="16x16">
 
@@ -361,6 +364,7 @@
   <script src="script.js" charset="utf-8"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
 
 </body>
 
