Hakkımızda responsive ayarı.

--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -143,12 +143,12 @@
     <!-- Haftanın Kitapları -->
     <div class="hizmetler text-center">
 
-      <div class="row featurette kart-11 pt-3 pb-3 for-media-queries">
+      <div class="row featurette kart-11 pt-5 pb-5 for-media-queries">
         <div class="col-md-7 kart-govde-11 ">
-          <h2 class="featurette-heading">Lorem ipsum dolor sit.<span class="text-muted">Lorem ipsum dolor.</span></h2>
+          <h2 class="featurette-heading">Lorem ipsum dolor sit. <span class="text-muted">Lorem ipsum dolor.</span></h2>
           <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent scelerisque neque a efficitur ullamcorper.</p>
         </div>
-        <div class="col-md-5 d-flex align-items-center for-media-queries-img justify-content-center">
+        <div class="col-md-5 align-items-center for-media-queries-img justify-content-center">
           <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
             focusable="false">
             <title>Placeholder</title>
@@ -160,12 +160,12 @@
 
       <div class="b-example-divider"></div>
 
-      <div class="row featurette pt-3 pb-3 kart-12 for-media-queries">
-        <div class="col-md-7 order-md-2 kart-govde-12">
-          <h2 class="featurette-heading">Lorem ipsum dolor sit amet.<span class="text-muted">Lorem ipsum dolor.</span></h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc euismod nulla et.</p>
+      <div class="row featurette pt-5 pb-5 kart-12 for-media-queries">
+        <div class="col-md-7 order-xl-2 kart-govde-12">
+          <h2 class="featurette-heading">Nam non malesuada neque, <span class="text-muted">at ullamcorper erat.</span></h2>
+          <p class="lead">Nullam ac aliquam metus. Praesent in sodales augue, vitae fringilla ipsum. Maecenas tristique, est non dignissim elementum, justo lorem suscipit turpis, id aliquam urna dui at massa.</p>
         </div>
-        <div class="col-md-5 order-md-1 d-flex align-items-center for-media-queries-img justify-content-center">
+        <div class="col-md-5 order-xl-1 align-items-center for-media-queries-img justify-content-center">
           <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
             focusable="false">
             <title>Placeholder</title>
@@ -176,12 +176,13 @@
       </div>
 
       <div class="b-example-divider"></div>
+
       <div class="row featurette pt-5 pb-5 kart-13 for-media-queries">
         <div class="col-md-7 kart-govde-13">
-          <h2 class="featurette-heading">Lorem ipsum dolor sit.<span class="text-muted">Lorem ipsum.</span></h2>
-          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum fermentum.</p>
+          <h2 class="featurette-heading">Curabitur gravida nibh tellus, <span class="text-muted">eu egestas quam vestibulum.</span></h2>
+          <p class="lead">Duis ut justo at eros posuere semper id eget nulla. Nullam efficitur, est vitae venenatis aliquam, mauris purus malesuada nunc, at ultricies enim lacus id eros. In tempus augue ac leo sollicitudin fermentum.</p>
         </div>
-        <div class="col-md-5 d-flex align-items-center for-media-queries-img justify-content-center">
+        <div class="col-md-5 align-items-center for-media-queries-img justify-content-center">
           <!-- <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
             focusable="false">
             <title>Placeholder</title>
