İletişim sayfasına div-divider eklendi.

--- a/iletisim.html
+++ b/iletisim.html
@@ -88,6 +88,9 @@
       </div>
     </header>
 
+    <div class="b-example-divider masthead-alt"></div>
+
+
     <section class="ftco-section">
       <div class="container">
         <div class="row justify-content-center">
@@ -178,6 +181,9 @@
       </div>
     </section>
 
+    <div class="b-example-divider"></div>
+
+
     <section class="google-maps-wrapper">
       <div id="google-io" class="container d-flex justify-content-center">
         <div class="border google-maps">
@@ -186,14 +192,17 @@
       </div>
     </section>
 
+    <div class="b-example-divider googlemaps-alt"></div>
+
+
 
     <footer class="deniz">
-      <div class="footer">
+      <div class="footer mb-3 mt-5">
         <p>Deniz YILDIRIM</p>
         <a class="instagram-a" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://twitter.com/?lang=tr" target="_blank"><i class="fab fa-twitter ms-3"></i></a>
         <a href="https://tr-tr.facebook.com/" target="_blank"><i class="fab fa-facebook ms-3"></i></a>
-        <a href="https://github.com/denizzy/web-tasarim" target="_blank"><i class="fab fa-github ms-3"></i></a>
+        <a href="https://github.com/denizzy/web-tasarim" target="_blank"><i class="fab fa-github ms-3"></i><p>Sitenin kaynak kodları</p></a>
       </div>
     </footer>
   </div>
