--- a/vizyonmisyon.html
+++ b/vizyonmisyon.html
@@ -137,7 +137,7 @@
         <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://twitter.com/?lang=tr" target="_blank"><i class="fab fa-twitter ms-3"></i></a>
         <a href="https://tr-tr.facebook.com/" target="_blank"><i class="fab fa-facebook ms-3"></i></a>
-        <a href="https://github.com/denizzy/web-tasarim" target="_blank"><i class="fab fa-github ms-3"></i></a>
+        <a href="https://github.com/denizzy/web-tasarim" target="_blank"><i class="fab fa-github ms-3"></i><p>Sitenin kaynak kodları</p></a>
       </div>
     </footer>
 
