--- a/iletisim.html
+++ b/iletisim.html
@@ -8,6 +8,8 @@
   <title>İletişim</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 
 
 
@@ -75,18 +77,22 @@
 <body class="d-flex text-center text-white">
 
   <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
-    <header class="masthead mb-auto mt-4 baslik">
-      <div class="inner">
-        <h3 class="masthead-brand"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</h3>
-        <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link" href="index.html">Anasayfa</a>
-          <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
-          <a class="nav-link active" href="iletisim.html">İletişim</a>
-          <a class="nav-link" href="vizyonmisyon.html">Vizyon/Misyon</a>
-
-        </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark navigasyon">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="index.html">Anasayfa</a>
+            <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
+            <a class="nav-link active" href="iletisim.html">İletişim</a>
+            <a class="nav-link" href="vizyonmisyon.html">Vizyon/Misyon</a>
+          </div>
+        </div>
       </div>
-    </header>
+    </nav>
 
     <div class="b-example-divider masthead-alt"></div>
 
@@ -209,6 +215,8 @@
 
 
   <script src="script.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </body>
 
