--- a/index.html
+++ b/index.html
@@ -50,17 +50,22 @@
 
 
   <div class="cover-container d-flex h-100 mx-auto flex-column">
-    <header class="masthead mt-4">
-      <div class="inner">
-        <h3 class="masthead-brand"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</h3>
-        <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="index.html">Anasayfa</a>
-          <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
-          <a class="nav-link" href="iletisim.html">İletişim</a>
-          <a class="nav-link" href="vizyonmisyon.html">Vizyon/Misyon</a>
-        </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navigasyon">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="index.html">Anasayfa</a>
+            <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
+            <a class="nav-link" href="iletisim.html">İletişim</a>
+            <a class="nav-link" href="vizyonmisyon.html">Vizyon/Misyon</a>
+          </div>
+        </div>
       </div>
-    </header>
+    </nav>
     <div class="b-example-divider"></div>
 
 
@@ -353,7 +358,9 @@
         <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://twitter.com/?lang=tr" target="_blank"><i class="fab fa-twitter ms-3"></i></a>
         <a href="https://tr-tr.facebook.com/" target="_blank"><i class="fab fa-facebook ms-3"></i></a>
-        <a href="https://github.com/denizzy/web-tasarim" target="_blank"><i class="fab fa-github ms-3"></i><p>Sitenin kaynak kodları</p></a>
+        <a href="https://github.com/denizzy/web-tasarim" target="_blank"><i class="fab fa-github ms-3"></i>
+          <p>Sitenin kaynak kodları</p>
+        </a>
       </div>
     </footer>
   </div>
