--- a/vizyonmisyon.html
+++ b/vizyonmisyon.html
@@ -89,19 +89,22 @@
 <body>
 
   <main>
-    <div class="masthead-wrap">
-      <header class="masthead mb-auto mt-4">
-        <div class="inner">
-          <h3 class="masthead-brand"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</h3>
-          <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link" href="index.html">Anasayfa</a>
+    <nav class="navbar navbar-expand-lg navbar-dark navigasyon">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse text-center" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="index.html">Anasayfa</a>
             <a class="nav-link" href="hakkimizda.html">Hakkımızda</a>
             <a class="nav-link" href="iletisim.html">İletişim</a>
             <a class="nav-link active" href="vizyonmisyon.html">Vizyon/Misyon</a>
-          </nav>
+          </div>
         </div>
-      </header>
-    </div>
+      </div>
+    </nav>
 
 
 
