--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
   <div class="cover-container d-flex h-100 mx-auto flex-column">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navigasyon">
+    <nav class="navbar navbar-expand-lg navbar-dark navigasyon">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><i class="fab fa-slack"></i> HİT İÖ Web Çalışması</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
