Anasayfa kitap-şarkı-video marginler yenilendi.

--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -123,22 +123,21 @@
       <div class="row uclu">
         <div class="col-lg-4">
           <img class="avatar-1 border" src="https://www.svgrepo.com/show/170303/avatar.svg" alt="">
-          <h2>Başlık 1</h2>
+          <h2 class="row-uclu-h2">Başlık 1</h2>
           <p>Lorem ipsum dolor sit amet.</p>
-          <p><a class="btn btn-secondary" href="#">Detay</a></p>
+          <!-- <p><a class="btn btn-secondary" href="#">Detay</a></p> -->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="avatar-2 border" src="https://www.svgrepo.com/show/53617/avatar.svg" alt="">
-
-          <h2>Başlık 2</h2>
+          <h2 class="row-uclu-h2">Başlık 2</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nibh tortor, aliquet in ipsum eget, interdum egestas leo.</p>
-          <p><a class="btn btn-secondary" href="#">Detay</a></p>
+          <!-- <p><a class="btn btn-secondary" href="#">Detay</a></p> -->
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="avatar-3 border" src="https://www.svgrepo.com/show/122767/avatar.svg" alt="">
-          <h2>Başlık 3</h2>
+          <h2 class="row-uclu-h2">Başlık 3</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <p><a class="btn btn-secondary" href="#">Detay</a></p>
+          <!-- <p><a class="btn btn-secondary" href="#">Detay</a></p> -->
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
     </div>
